<resources>
    <string name="app_name">BPOSeats</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">BPO Connect</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_conversation">BPO Connect</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_auth">AuthActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="create_account">Create Account</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="already_registered_login">Already registered? Login</string>
    <string name="quota_expired">Your SMS quota has expired</string>
    <string name="invalid_firebase_auth">Invalid Authentication</string>
    <string name="verify_code">Verify Code</string>
    <string name="verification_code">Verification Code</string>
    <string name="code_verification">Code Verification</string>
    <string name="invalid_verification_code">Invalid verification code</string>
    <string name="unknown_error">Unknown Error Occurred</string>
    <string name="sigin_in">Sign In</string>
    <string name="not_registered_signup">Not yet registered? Sign Up</string>
</resources>
